# llm-golden-flower

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  start.sh
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/app/agents/: __init__.py  agent_manager.py  base_agent.py  chat_engine.py  experience.py  personalities.py  prompts.py
backend/app/api/: __init__.py  azure_openai.py  chat.py  copilot.py  game.py  openrouter.py  persistence.py  provider.py  settings.py  siliconflow.py  thought.py  websocket.py  zhipu.py
backend/app/db/: __init__.py  database.py  schemas.py
backend/app/engine/: __init__.py  deck.py  evaluator.py  game_manager.py  rules.py
backend/app/models/: __init__.py  card.py  chat.py  game.py  thought.py
backend/app/services/: copilot_auth.py  provider_manager.py
backend/app/thought/: __init__.py  recorder.py  reporter.py
backend/tests/: conftest.py  test_agents.py  test_api_models_and_settings.py  test_chat_api.py  test_chat_engine.py  test_database.py  test_evaluator.py  test_experience.py  test_game_api.py  test_game_engine.py  test_integration_llm.py  test_model_config.py  test_persistence.py  test_personalities_and_prompts.py  test_rules.py  test_thought.py  test_thought_api.py  test_websocket.py
deploy/: nginx.conf
docs/: DEPLOY.md  PRD.md  TASKS.md  TECH_DESIGN.md  design-system.md  frontend-redesign-tasks.md  game-table-3d-upgrade.md  redesign-plan.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  (+1 more)
(+59 files in other folders)
